# libc

./: CMakeLists.txt  README.rst
include/: CMakeLists.txt  ctype.h  stdio.h  stdlib.h  string.h  types.h
src/: CMakeLists.txt  ctype.c  stdio.c  stdlib.c  string.c
